--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "rxjs": "^6.6.3",
-    "vue": "^3.0.0",
-    "vuex": "^4.0.0-0"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -32,6 +31,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "file-loader": "^6.2.0",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   }
