--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
@@ -32,7 +30,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "file-loader": "^6.2.0",
-    "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-0"
+    "typescript": "~3.9.3"
   }
 }
