--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "core-js": "^3.6.5",
+    "mobile-device-detect": "^0.4.3",
     "register-service-worker": "^1.7.1",
     "rxjs": "^6.6.3",
     "vue": "^3.0.0"
